# ALMOXARIFADOCOMERCIAL

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PROMPT_SISTEMA_COMERCIAL.md  README.md  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  extensions.py
app/forms/: __init__.py  ativo.py  auth.py  cadastros.py  campos.py  compras.py  documento.py  emprestimo.py  estoque.py  inventario.py  produto.py  publico.py
app/models/: __init__.py  ativo.py  auditoria.py  base.py  categoria.py  compras.py  definicao_campo.py  documento.py  emprestimo.py  estoque.py  fornecedor.py  inventario.py  localizacao.py  movimentacao.py  organizacao.py  produto.py  publico.py  rbac.py  setor.py  transferencia.py  usuario.py  visibilidade.py
app/routes/: __init__.py  ativos.py  auth.py  categorias.py  compras.py  definicoes.py  documentos.py  emprestimos.py  estoque.py  inventarios.py  localizacoes.py  main.py  produtos.py  publico.py  setores.py  transferencias.py
app/security/: __init__.py  auditoria.py  escopo.py  permissions.py  rbac.py
app/services/: __init__.py  alertas.py  ativo_service.py  campos_customizados.py  compra_service.py  documento_service.py  emprestimo_service.py  estoque_service.py  excel.py  inventario_service.py  produto_service.py  publico_service.py  setor_service.py  setup.py  transferencia_service.py
app/templates/: base.html  dashboard.html  layout_app.html
app/utils/: __init__.py  formatacao.py  uploads.py
docker/: entrypoint.sh  nginx.conf
migrations/: script.py.mako
tests/: conftest.py  test_ativos.py  test_ativos_rotas.py  test_auth.py  test_cadastros_rotas.py  test_campos_customizados.py  test_compras.py  test_compras_rotas.py  test_documentos.py  test_documentos_rotas.py  test_emprestimos.py  test_emprestimos_rotas.py  test_escopo_visibilidade.py  test_estoque.py  test_estoque_rotas.py  test_formatacao.py  test_inventarios.py  test_inventarios_rotas.py  test_produtos.py  test_publico.py  test_publico_rotas.py  test_rbac_tenant.py  test_setores.py  test_transferencias.py  test_transferencias_rotas.py
(+81 files in other folders)
