[project]
name = "almoxarifado"
version = "0.1.0"
description = "Plataforma web multiorganização de controle de almoxarifado e patrimônio"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Almoxarifado Comercial" }]

dependencies = [
    # Núcleo web
    "Flask>=3.0",
    "Werkzeug>=3.0",
    "Jinja2>=3.1",
    # ORM e migrações
    "SQLAlchemy>=2.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "alembic>=1.13",
    # Banco
    "psycopg[binary]>=3.1",
    # Auth e segurança
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "WTForms>=3.1",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "Flask-Limiter>=3.5",
    "Flask-Talisman>=1.1",
    # Infra
    "Flask-Caching>=2.1",
    "Flask-Mail>=0.10",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "email-validator>=2.1",
    # Utilitários de domínio
    "openpyxl>=3.1",
    "qrcode>=7.4",
    "python-barcode>=0.15",
    "Pillow>=10.2",
    # Produção
    "gunicorn>=21.2",
]

[project.optional-dependencies]
pdf = ["WeasyPrint>=60.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-flask>=1.3",
    "factory_boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-redis",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # chamadas de função em defaults (padrão Flask/WTForms)
    "UP047",  # funções genéricas via TypeVar (padrão de decorators)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
